--- a/public/index.html
+++ b/public/index.html
@@ -25,7 +25,7 @@
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
     <link href="https://fonts.googleapis.com/css2?family=Geo&family=Gochi+Hand&family=Rock+Salt&display=swap" rel="stylesheet">
-    <title>Nasa</title>
+    <title>Nasa Pic of the Day</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
